--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>Hockey’s</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.10/dist/full.min.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+
+    <style>
+        * {
+            font-family: 'Manrope', sans-serif;
+        }
+    </style>
 </head>
 
 <body class="container mx-auto">
@@ -24,15 +33,11 @@
                     </div>
                     <ul tabindex="0"
                         class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
-                        <li><a>Item 1</a></li>
-                        <li>
-                            <a>Parent</a>
-                            <ul class="p-2">
-                                <li><a>Submenu 1</a></li>
-                                <li><a>Submenu 2</a></li>
-                            </ul>
-                        </li>
-                        <li><a>Item 3</a></li>
+                        <li><a>Home</a></li>
+                        <li><a>About</a></li>
+                        <li><a>Pages</a></li>
+                        <li><a>Blog</a></li>
+                        <li><a>Contacts</a></li>
                     </ul>
                 </div>
                 <a class="btn btn-ghost text-xl">Hockey<span class="text-[#FF4240]">'</span>s</a>
@@ -81,16 +86,115 @@
                 <div id="slide1" class="carousel-item relative w-full">
                     <img src="Images/1.png" class="w-full" />
                     <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
-                        <div>
-                            <a href="#slide4" class="btn btn-circle">❮</a>
-                            <a href="#slide2" class="btn btn-circle">❯</a>
-                    </div>
+                        <div class="">
+                            <a href="#slide4" class="btn rounded-full border-[#131318] bg-[#131318] text-white">❮</a>
+                            <a href="#slide2" class="btn rounded-full border-[#131318] bg-[#131318] text-white">❯</a>
+                        </div>
                     </div>
                 </div>
             </div>
+
+        </div>
+        <div
+            class="bg-[#131318] md:w-[566px] h-[165px] md:absolute md:-bottom-5 md:right-[110px] rounded-2xl p-[32px] text-white space-y-4 sm:m-10">
+            <h2 class="font-extrabold">Meet all the heroes from the field</h2>
+            <p>Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat dolor. Purus urna in
+                sit nullam proin.</p>
+        </div>
     </header>
     <main>
+        <h3 class="font-extrabold text-4xl text-center text-[#131318]">Professional Hockeys Club</h3>
+        <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+            placerat dolor. <br> Purus urna in
+            sit
+            nullam proin.</p>
+        <!-- radial progressbar -->
+        <section class="flex flex-col md:flex-row flex-wrap justify-around gap-8 my-20 text-center">
+            <div class="space-y-4">
+                <div class="radial-progress text-[#FF4240] h-[120px] w-[120px]" style="--value:87;" role="progressbar">
+                    87%</div>
+                <h4 class="font-semibold">h4Prayer Facility</h4>
+                <p class="font-normal w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+            <div class="space-y-4">
+                <div class="radial-progress text-[#49D293] h-[120px] w-[120px]" style="--value:95;" role="progressbar">
+                    95%</div>
+                <h4 class="font-semibold">Experienced Coach</h4>
+                <p class="font-normal w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+            <div class="space-y-4">
+                <div class="radial-progress text-[#FFB546] h-[120px] w-[120px]" style="--value:90;" role="progressbar">
+                    90%</div>
+                <h4 class="font-semibold">Senior Player</h4>
+                <p class="font-normal w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+            <div class="space-y-4">
+                <div class="radial-progress text-[#4C8DF1] h-[120px] w-[120px]" style="--value:80;" role="progressbar">
+                    80%</div>
+                <h4 class="font-semibold">Training Ground</h4>
+                <p class="font-normal w-[250px] mx-auto">Amet consectetur. Condimentum dignissim adipiscing .</p>
+            </div>
+        </section>
+        <!-- Program Sections -->
+        <section class="my-20">
+            <h3 class="font-extrabold text-4xl text-center text-[#131318]">Program Sections</h3>
+            <p class="text-center my-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis placerat
+                dolor. Purus urna in sit nullam proin.</p>
+            <div class="flex w-[90%] mx-auto gap-6 mx-w-[340px] flex-col md:flex-row space-y-6">
+                <div class="flex-1">
+                    <div class="hero min-h-screen rounded-2xl" style="background-image: url(Images/2.png);">
+                        <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+                        <div class="hero-content text-neutral-content text-left">
+                            <div class="max-w-md">
+                                <h1 class="mb-5 text-5xl font-bold">Junior Program</h1>
+                                <p class="mb-5">
+                                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                    Tortor congue sed et in.
+                                </p>
+                                <button class="btn bg-[#FF4240] border-0 text-white">Register Now!</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex-1 ">
+                    <div class="hero min-h-screen rounded-2xl" style="background-image: url(Images/3.png);">
+                        <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+                        <div class="hero-content text-neutral-content text-left">
+                            <div class="max-w-md">
+                                <h1 class="mb-5 text-5xl font-bold">Teenager Program</h1>
+                                <p class="mb-5">
+                                    Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                                    enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla.
+                                    Tortor congue sed et in.
+                                </p>
+                                <button class="btn bg-[#FF4240] border-0 text-white">Register Now!</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="my-5">
+                <div class="hero min-h-screen rounded-2xl w-[90%] mx-auto" style="background-image: url(Images/4.png);">
+                    <div class="hero-overlay bg-opacity-60 rounded-2xl"></div>
+                    <div class="hero-content text-neutral-content text-left">
+                        <div class="max-w-md">
+                            <h1 class="mb-5 text-5xl font-bold">Professional Program</h1>
+                            <p class="mb-5">
+                                Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit
+                                enim sagittis turpis in magna. Id et sed euismod natoque amet nunc morbi nulla. Tortor
+                                congue sed et in.
+                            </p>
+                            <button class="btn bg-[#FF4240] border-0 text-white">Register Now!</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- clients questions or FAQ -->
+        <section>
 
+        </section>
     </main>
     <footer>
 
