--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/a04bede896.js" crossorigin="anonymous"></script>
 
     <style>
         * {
@@ -61,23 +62,6 @@
                 </div>
 
                 <a class="btn">Get Ticket</a>
-
-                <label class="swap swap-rotate">
-                    <!-- this hidden checkbox controls the state -->
-                    <input type="checkbox" checked class="theme-controller" value="light" />
-
-                    <!-- sun icon -->
-                    <svg class="swap-off h-10 w-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path
-                            d="M5.64,17l-.71.71a1,1,0,0,0,0,1.41,1,1,0,0,0,1.41,0l.71-.71A1,1,0,0,0,5.64,17ZM5,12a1,1,0,0,0-1-1H3a1,1,0,0,0,0,2H4A1,1,0,0,0,5,12Zm7-7a1,1,0,0,0,1-1V3a1,1,0,0,0-2,0V4A1,1,0,0,0,12,5ZM5.64,7.05a1,1,0,0,0,.7.29,1,1,0,0,0,.71-.29,1,1,0,0,0,0-1.41l-.71-.71A1,1,0,0,0,4.93,6.34Zm12,.29a1,1,0,0,0,.7-.29l.71-.71a1,1,0,1,0-1.41-1.41L17,5.64a1,1,0,0,0,0,1.41A1,1,0,0,0,17.66,7.34ZM21,11H20a1,1,0,0,0,0,2h1a1,1,0,0,0,0-2Zm-9,8a1,1,0,0,0-1,1v1a1,1,0,0,0,2,0V20A1,1,0,0,0,12,19ZM18.36,17A1,1,0,0,0,17,18.36l.71.71a1,1,0,0,0,1.41,0,1,1,0,0,0,0-1.41ZM12,6.5A5.5,5.5,0,1,0,17.5,12,5.51,5.51,0,0,0,12,6.5Zm0,9A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
-                    </svg>
-
-                    <!-- moon icon -->
-                    <svg class="swap-on h-10 w-10 fill-current" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                        <path
-                            d="M21.64,13a1,1,0,0,0-1.05-.14,8.05,8.05,0,0,1-3.37.73A8.15,8.15,0,0,1,9.08,5.49a8.59,8.59,0,0,1,.25-2A1,1,0,0,0,8,2.36,10.14,10.14,0,1,0,22,14.05,1,1,0,0,0,21.64,13Zm-9.5,6.69A8.14,8.14,0,0,1,7.08,5.22v.27A10.15,10.15,0,0,0,17.22,15.63a9.79,9.79,0,0,0,2.1-.22A8.11,8.11,0,0,1,12.14,19.73Z" />
-                    </svg>
-                </label>
             </div>
         </div>
         <!-- banner section -->
@@ -103,7 +87,7 @@
         </div>
     </header>
     <main>
-        <h3 class="font-extrabold text-4xl text-center text-[#131318]">Professional Hockeys Club</h3>
+        <h3 class="font-extrabold text-4xl text-center text-[#131318] mt-8">Professional Hockeys Club</h3>
         <p class="text-center">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
             placerat dolor. <br> Purus urna in
             sit
@@ -191,13 +175,186 @@
                 </div>
             </div>
         </section>
-        <!-- clients questions or FAQ -->
+        <!-- Our new products -->
         <section>
-
+        </section>
+        <!-- clients question -->
+        <section>
+            <div>
+                <h3 class="font-extrabold text-4xl text-center text-[#131318]">Clients Question</h3>
+                <p class="text-center md:px-[280px] my-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam
+                    turpis placerat dolor. Purus urna in sit
+                    nullam proin.</p>
+            </div>
+            <div>
+                <div class="hero bg-base-200 min-h-screen rounded-xl">
+                    <div class="hero-content flex-col gap-24 lg:flex-row">
+                        <div><img src="Images/11.png" class="max-w-sm rounded-lg shadow-2xl" /></div>
+                        <div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" checked="checked" />
+                                <div class="collapse-title text-xl font-bold">Our Equipment
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-bold">Hockey Training
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-bold">Private Lessons
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-bold">Ski Touring
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-bold">Booking
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                            <div class="collapse collapse-plus bg-base-200">
+                                <input type="radio" name="my-accordion-3" />
+                                <div class="collapse-title text-xl font-bold">Pricings
+                                </div>
+                                <div class="collapse-content">
+                                    <p>Dolor sit amet consectetur. Ut urna diam quis sagittis. Elit elit enim sagittis
+                                        turpis in magna.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Get In Touch -->
+        <section class="my-8">
+            <div class="my-5">
+                <h4 class="font-extrabold text-4xl text-center text-[#131318]">Get In Touch</h4>
+                <p class="text-center my-6">Dit amet consectetur. Condimentum dignissim adipiscing aliquam turpis
+                    placerat dolor. Purus urna in sit nullam proin.</p>
+            </div>
+            <div class="flex justify-around flex-col md:flex-row">
+                <div class="flex flex-col gap-6">
+                    <!-- card 1 -->
+                    <div class=" card bg-[#FDDD5F1A] w-96 shadow-xl">
+                        <figure class="flex justify-start">
+                            <img src="Images/Group 1171275317.png" alt="phone" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Phone Number</h2>
+                            <p>(+62) 123-321-543</p>
+                        </div>
+                    </div>
+                    <!-- card 2 -->
+                    <div class=" card bg-[#FDDD5F1A] w-96 shadow-xl">
+                        <figure class="flex justify-start">
+                            <img src="Images/Group 1171275318.png" alt="Email" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">Email:</h2>
+                            <p>hockeys@support.com</p>
+                        </div>
+                    </div>
+                    <!-- card 3 -->
+                    <div class=" card bg-[#629CF31A] w-96 shadow-xl">
+                        <figure class="flex justify-start">
+                            <img src="Images/Group 1171275321.png" alt="location" />
+                        </figure>
+                        <div class="card-body">
+                            <h2 class="card-title">location</h2>
+                            <p>152/1 Mohakhali Wireless Gate</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex flex-col gap-10">
+                    <!-- form -->
+                    <label class="input input-bordered flex items-center gap-2">
+                        <input type="text" class="grow" placeholder="Your Name" />
+                    </label>
+                    <label class="input input-bordered flex items-center gap-2">
+                        <input type="email" class="grow" placeholder="Email" />
+                    </label>
+                    <label class="input input-bordered flex items-center gap-2">
+                        <input type="text" class="grow" placeholder="Subject" />
+                    </label>
+                    <label class="input input-bordered flex items-center gap-2">
+                        <input type="number" class="grow" placeholder="Phone Number" />
+                    </label>
+                </div>
+            </div>
+        </section>
+        <!-- social media -->
+        <section>
+            <h4 class="text-center font-extrabold text-2xl">Social Media</h4>
+            <div class="w-[85%] mx-auto bg-[#13131808] h-[150px] rounded-xl flex flex-row gap-5 justify-center">
+                <div class="text-2xl"><i class="fa-brands fa-twitter"></i></div>
+                <div class="text-2xl"><i class="fa-brands fa-facebook-f"></i></div>
+                <div class="text-2xl"><i class="fa-brands fa-instagram "></i></div>
+                <div class="text-2xl"><i class="fa-brands fa-github"></i></div>
+            </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer text-white bg-[#131318] text-base-content w-full p-10">
+        <aside>
+            <h3 class="text-4xl font-extrabold">
+                Get In Touch
+            </h3>
+            <p class="w-[346px]">Dit amet consectetur. Condimentum adipiscing aliquam turpis placerat dolor. Purus urna
+                in sit nullam
+                proin.</p>
+            <div class="flex gap-4">
+                <i class="fa-regular fa-envelope text-xl" style="color: #ff4240;"></i>
+                <p>hockeys@support.com</p>
+            </div>
+            <div class="flex gap-4">
+                <i class="fa-regular fa-phone" style="color: #ff4240;"></i>
+                <p>(+62) 123-321-543</p>
+            </div>
+        </aside>
+        <nav>
+            <h6 class="footer-title">Services</h6>
+            <a class="link link-hover">Branding</a>
+            <a class="link link-hover">Design</a>
+            <a class="link link-hover">Marketing</a>
+            <a class="link link-hover">Advertisement</a>
+        </nav>
+        <nav>
+            <h6 class="footer-title">Company</h6>
+            <a class="link link-hover">About us</a>
+            <a class="link link-hover">Contact</a>
+            <a class="link link-hover">Jobs</a>
+            <a class="link link-hover">Press kit</a>
+        </nav>
+        <nav>
+            <h6 class="footer-title">Legal</h6>
+            <a class="link link-hover">Terms of use</a>
+            <a class="link link-hover">Privacy policy</a>
+            <a class="link link-hover">Cookie policy</a>
+        </nav>
     </footer>
 </body>
 
